fix horizontal scroll from subnav

--- a/scss/off-canvas.scss
+++ b/scss/off-canvas.scss
@@ -232,6 +232,7 @@ $nav-bar-height: 48px;
       background: #454545 !important; /* M */
       border-radius: 4px !important;
       top: 50px !important;
+      left:0;
       position: absolute;
       overflow: hidden;
       visibility: hidden;
